[metadata]
name = napari-hsafm-browser
version = 0.0.1
author = Sichen Pan
author_email = psichen@outlook.com
url = https://github.com/psichen/napari-hsafm-browser
license = BSD-3-Clause
description = a napari plugin for viewing high-speed AFM movies
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/psichen/napari-hsafm-browser/issues
    Documentation = https://github.com/psichen/napari-hsafm-browser#README.md
    Source Code = https://github.com/psichen/napari-hsafm-browser
    User Support = https://github.com/psichen/napari-hsafm-browser/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    napari-hsafm-browser = napari_hsafm_browser
